--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Proyect TEST 1</title>
-    <link rel="stylesheet" type="text/css" href="./css/proyect.css">
+    <link rel="stylesheet" type="text/css" href="./css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="./css/Proyect.css">
 </head>
 <body>
     <header>
