--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <img src="imagenes/avatar.jpg" alt="usuario_imagen">
             </figure>
             <a href="#" class="flechita">
-                X
+                
             </a>
         </div>
     </header>
@@ -71,7 +71,7 @@
                     <a href="#" class="comentarios">
                         10
                     </a>
-                    <a href="#" class="estrellita">*</a>
+                    <a href="#" class="estrellita"></a>
                 </div>
                  
             </div>
